--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,35 @@
 .App {
   text-align: center;
+  display: grid;
+  grid-template-areas:
+  'header header header'
+  'menu main main'
+  'footer footer footer';
+  grid-template-rows: 10% 80%;
+  grid-template-columns: 15%;
+  border: 2px solid yellow;
+  width: 100vw;
+  height: 100vh;
+
+}
+
+
+.Header {
+  grid-area: header;
+  border-bottom: 2px solid blue;
+}
+
+.Navbar {
+  grid-area: menu;
+  border-right: 2px solid palevioletred;
+
+}
+
+
+.Footer {
+  grid-area: footer;
+  border-top: 2px solid green;
+
 }
 
 .App-logo {
@@ -32,6 +62,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
